02-aplicacoes/redmine/redmine-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  labels:
    app: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.0
        ports:
        - containerPort: 3000
