02-aplicacoes/redmine/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  labels:
    name: redmine-service
spec:
  selector:
    app: redmine
  ports:
    - name: http
      port: 80
      targetPort: 3000
